# blog-voice

./: .env.example  .gitignore  CLAUDE.md  README.md  classify_voice_modes.py  generate_lrc.py  generate_tts.py  main.py  pyproject.toml  scrape_voices.py  split_sentences.py  split_voices.py  voice.md  voice_labels.json
English-learn/: AI-infra-podcast.md  English-learn.md  ai-chat-prompt.md  anki-grammar-feedback-2026-05-25.tsv  reference-advice1.md  reference-advice2.md  reference-advice3.md  review-workflow.md
English-learn/cards/: _templates.md
English-learn/log/: _template.md  day-01.md  day-02.md
English-learn/references/: markji-content-syntax.md  markji-table-import.md
articles/pytorch-internals/: meta.json
src/blog_voice/: __init__.py  cli.py  paths.py
src/blog_voice/audio/: convert.py  merge.py
src/blog_voice/llm/: zenmux.py
src/blog_voice/subtitle/: lrc.py
src/blog_voice/text/: enhance.py  normalize.py  sentences.py
src/blog_voice/tts/: base.py  chatterbox.py  fish_audio.py  runner.py
src/blog_voice/verify/: audio.py
src/blog_voice/voices/: classify.py  scrape.py  split.py
