[project]
name = "blog-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chatterbox-tts>=0.1.7",
    "httpx>=0.28.1",
    "openai>=1.79.0",
    "python-dotenv>=1.1.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
