[project]
name = "blog-voice"
version = "0.1.0"
description = "Voice-cloned TTS pipeline for English tech blog articles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chatterbox-tts>=0.1.7",
    "fish-audio-sdk>=1.0.0",
    "httpx>=0.28.1",
    "librosa>=0.10.2",
    "openai>=1.79.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "soundfile>=0.12",
]

[project.scripts]
blog-voice = "blog_voice.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_voice"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
